--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="http://code.jquery.com/jquery.js"></script>
     <script type="text/javascript" src="js/jquery-ui-1.8.5.custom.min.js"></script>
     <style>
-      .element { border: 1px solid black; padding 10px; margin: 10px; display: inline-block }
+      .element { border: 1px solid black; padding 10px; margin: 10px; display: inline-block; user-select: none }
       .selected { background: #ffaa77 }
       .deselected { background: white }
       .invisible { display: none }
@@ -32,15 +32,20 @@ var select = function (x) {
     x.addClass('selected');
     x.removeClass('deselected');
     selected = x;
-    $('#assumptions').text(x.expr.assumptions().join(' '));
+    $('#assumptions').empty();
+    var ass = x.expr.assumptions();
+    for (var i in ass) {
+        $('#assumptions').append(makeUI(varref(ass[i])));
+    }
 };
 
 var selectable = function (x) {
-    x.mousedown(function(e) {
+    x.click(function(e) {
         select(x);
         e.stopPropagation();
     });
-    x.draggable({ containment: 'parent' });
+    x.onselectstart = function() { return false; }
+    x.draggable({ opacity: 0.7, helper: "clone" });
     return x;
 };
 
@@ -57,24 +62,65 @@ var apply = function (x,y) {
     outer = {
         fun: x,
         arg: y,
-        render: function(v) {
-            return $('<div class="element deselected"></div>').append(v(x)).append(v(y));
+        render: function (v) {
+            return $('<div class="element deselected"/>').append(
+                $('<table/>').append(
+                    $('<tr/>').append(
+                        $('<td/>').append(v(outer.fun))).append(
+                        $('<td/>').append(v(outer.arg)))));
         },
-        assumptions: function() { return x.assumptions().concat(y.assumptions()) },
+        assumptions: function() { return outer.fun.assumptions().concat(outer.arg.assumptions()) },
+        
+        commands: {
+            left: function () { select(outer.fun.ui) },
+            right: function () { select(outer.arg.ui) },
+            backspace: function () {
+                console.log("Kaboom!");
+                replace(outer, solovar("?"));
+                refresh();
+            },
+        },
     };
     return outer;
 };
 
-var variable = function (text) {
+var varref = function (ref) {
     var outer;
     outer = {
-        name: text,
-        render: function(v) { 
-            return $('<div class="element deselected"></div>').append(text);
+        ref: ref,
+        render: function(v) {
+            return $('<div class="element deselected"/>').append(outer.ref.name);
         },
-        assumptions: function() { return [text] },
+        assumptions: function() { return [outer.ref] },
+
+        commands: {
+            e: function () {
+                deselect();
+                var input = $('<input/>');
+                input.attr('value', outer.ref.name);
+                input.keypress(function(e) {
+                    if (e.which == 13) {
+                        outer.ref.name = input.attr('value');
+                        refresh();
+                        select(outer.ui);
+                    }
+                });
+                input.focus();
+                outer.ui.replaceWith(input);
+            },
+        },
     };
     return outer;
+};
+
+var variable = function (name) {
+    return {
+        name: name,
+    };
+};
+
+var solovar = function (name) {
+    return varref(variable(name));
 };
 
 var substitution = function (free, arg, body) {
@@ -83,50 +129,105 @@ var substitution = function (free, arg, body) {
         free: free,
         arg: arg,
         body: body,
-        render: function(v) { 
-            return $('<div class="element deselected" style="border: double"></div>').append(
-                $('<table></table>').append(
-                    $('<tr></tr>').append(
-                        $('<td></td>').append(free + "=").append(v(arg)))).append(
-                    $('<tr></tr>').append(
-                        $('<td></td>').append(v(body)))));
+        render: function (v) {
+            return $('<div class="element deselected" style="border: double"/>').append(
+                $('<table/>').append(
+                    $('<tr/>').append(
+                        $('<td/>').append(outer.free + "=").append(v(outer.arg)))).append(
+                    $('<tr/>').append(
+                        $('<td/>').append(v(outer.body)))))
         },
         assumptions: function() { 
             return flatMap(body.assumptions(), function(x) {
-                if (x == free) {
-                    return arg.assumptions();
+                if (x == outer.free) {
+                    return outer.arg.assumptions();
                 }
                 else {
                     return [x];
                 }
             }) 
-        }
+        },
+        
+        commands: {
+            down: function() {
+                select(outer.body.ui);
+            },
+        },
     };
     return outer;
 };
 
+var replace = function (src, target) {
+    var p = src.parent;
+    if (p) {
+        for (var i in p) {
+            if (p[i] == src) {
+                p[i] = target;
+            }
+        }
+    }
+};
+
 var makeUI = function (x) {
-    var ui = x.render(function(e) {
-        return makeUI(e);
+    var ui = x.render(function (e) {
+        var r = makeUI(e);
+        e.parent = x;
+        return r;
     });
 
     ui.expr = x;
+    x.ui = ui;
     selectable(ui);
 
     return ui;
 };
 
+var globalCommands = {
+    up: function (expr) {
+        if (expr.parent) {
+            select(expr.parent.ui);
+        }
+    },
+}
+
+var keycodes = {
+    65: 'a',
+    70: 'f',
+    69: 'e',
+    83: 's',
+    8: 'backspace',
+    37: 'left',
+    38: 'up',
+    39: 'right',
+    40: 'down',
+};
+
 $(document).keydown(function(e) {
-    if (selected != null && e.which == 32) {
-        var olds = selected;
-        deselect();
-        var newe = apply(olds.clone(), "z");
-        var target = olds;
-        target.replaceWith(reccodonize(newe));
+    console.log("Key " + e.which);
+    if (selected != null) {
+        var code = keycodes[e.which];
+        var cmds = selected.expr.commands;
+        if (code) {
+            if (cmds && cmds[code]) {
+                cmds[code]();
+            }
+            else if (globalCommands[code]) {
+                globalCommands[code](selected.expr);
+            }
+        }
     }
 });
 
-$("#content").append(makeUI(apply(substitution("z",variable("w"),apply(variable("x"), variable("z"))), variable("y"))));
+document.onselectstart = function(e) { return false; }
+
+var xvar = variable("x");
+var ds = apply(substitution("z",solovar("w"),apply(varref(xvar), solovar("z"))), varref(xvar));
+
+var refresh = function() {
+    $('#content').html(makeUI(ds));
+};
+
+refresh();
 
 });
 
@@ -142,12 +243,11 @@ $("#content").append(makeUI(apply(substitution("z",variable("w"),apply(variable(
     </script>
   </head>
   <body>
+   <div>Assumptions: <div id="assumptions"></div></div>
    
-   <div id="content" style="display: inline-block">
+   <div id="content" style="overflow:hidden">
    </div>
    <br/>
-
-   <div id="assumptions">Assumptions</div>
   
    <div style="display: none">
    </div>
