New feature:  really confusing undo history!!

--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
     
   </head>
   <body>
-   <div>Assumptions: <div id="assumptions"></div></div>
-   
    <div id="content" style="overflow:hidden">
    </div>
    <br/>
+   
+   <div>Assumptions: <div id="assumptions"></div></div>
+   <div>History: <div id="history"></div></div>   
+
   
    <div style="display: none">
    </div>
