--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
    <br/>
    
    <div>Assumptions: <div id="assumptions"></div></div>
-   <div>History: <div id="history"></div></div>   
+   <div>
+    History:
+    <table>
+     <tr><td><b>Undo</b></td><td><div id="history_undo"></td></tr>
+     <tr><td><b>Redo</b></td><td><div id="history_redo"></td></tr>
+    </table>
+   </div>
 
   
    <div style="display: none">
