--- a/index.html
+++ b/index.html
@@ -23,10 +23,7 @@
    <div>Assumptions: <div id="assumptions"></div></div>
    <div>
     History:
-    <table>
-     <tr><td><b>Undo</b></td><td><div id="history_undo"></td></tr>
-     <tr><td><b>Redo</b></td><td><div id="history_redo"></td></tr>
-    </table>
+    <div id="history"></div>
    </div>
 
   
