Display available commands as buttons.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
    </div>
    <br/>
    
-   <div>Assumptions: <div id="assumptions"></div></div>
+   <div>
+    Actions: 
+    <div  id="actions"></div>
+   </div>
+
+   <div>
+    Assumptions: 
+    <div id="assumptions"></div>
+   </div>
+
    <div>
     History:
     <div id="history"></div>
